# dalton

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: CI Workflow.yml  PyPI Publisher.yml  Release Manager.yml
dalton/: __init__.py  api.py  atomic.py  atomic_classes.py  atomic_errors.py  dalton.py  test.py
dalton/tools/: atomic_classes.py
daltonapi/: __init__.py  api.py
daltonapi/atomic/: __init__.py  assets.py  collections.py  templates.py
daltonapi/tools/: __init__.py  atomic_classes.py  atomic_errors.py  wax_classes.py
daltonapi/wax/: __init__.py  accounts.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/usage/: API.doctree  Atom.doctree  Atomic Classes.doctree  Atomic Errors.doctree  Dalton.doctree  Getting Started.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/usage/: Atom.rst.txt  Atomic Errors.rst.txt
docs/_build/html/usage/: API.html  Atom.html  Atomic Classes.html  Atomic Errors.html  Dalton.html  Getting Started.html
docs/usage/: API.rst  Atom.rst  Atomic Classes.rst  Atomic Errors.rst  Dalton.rst  Getting Started.rst  Installation.rst
tests/: conftest.py  test_api.py  test_asset.py  test_atom.py  test_collection.py  test_dalton.py  test_template.py
