[tool.poetry]
name = "daltonapi"
version = "0.4.3"

description = "Python wrapper for the AtomicAssets API"
authors = ["stuckatsixpm <stuckat6pm@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stuckatsixpm/dalton"
repository = "https://github.com/stuckatsixpm/dalton"
documentation = "https://dalton.readthedocs.io/en/latest/"
keywords = ["wax", "atomicassets", "api", "wrapper", "dalton", "nft"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pylint = "^2.7.4"
Sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-fulltoc = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
